--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "misakstvanu/laravel-pulse-hub",
     "description": "A package for collecting data from multiple apps to a single database.",
     "type": "library",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "require": {
-        "php": "^8.2|^8.3",
+        "php": "^8.2|^8.3|^8.4",
         "ext-pdo": "*",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^11.0|^12.0",
         "laravel/pulse": "^1.2"
     },
     "require-dev": {
